--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src test --max-warnings 0 && prettier src test --check",
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
