--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@nhcarrigan/eslint-config": "^3.2.0",
     "@nhcarrigan/prettier-config": "^3.2.0",
     "@nhcarrigan/typescript-config": "^3.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
