--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "homepage": "https://github.com/fac31/Jana-Reza-Bot#jana-reza-bot",
   "dependencies": {
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "openai": "^4.36.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
