--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.36.0"
   },
   "devDependencies": {
