--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --ignore-path .eslintignore --ext .js,.ts",
+    "lint": "eslint src --ignore-path .eslintignore --ext .js,.ts && prettier --check . ",
     "start": "ts-node src/index.ts"
   },
   "repository": {
